[project]
name = "pytorch-csu-ccc-summer-camp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.30.0",
    "matplotlib>=3.10.3",
    "networkx>=3.5",
    "numpy>=2.3.2",
    "torch>=2.7.1",
    "torchviz>=0.0.3",
]
